<?xml version="1.0" encoding="UTF-8"?>
<!--
    JBoss, Home of Professional Open Source
    Copyright 2012, Red Hat, Inc. and/or its affiliates, and individual
    contributors by the @authors tag. See the copyright.txt in the
    distribution for a full listing of individual contributors.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>jsf2-portlet-with-tests</artifactId>
    <groupId>org.jboss.quickstarts.portal</groupId>
    <name>JSF2 Portlet with Tests</name>
    <version>6.2.0.build-3-SNAPSHOT</version>
    <packaging>war</packaging>
    <description>A simple JSF2 portlet with tests.with tests.</description>
    <url>http://www.jboss.org</url>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <distribution>repo</distribution>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <properties>
        <!-- JBoss Portal Bill of Materials (BOM) version -->
        <version.jboss.portal.bom>6.2.0.build-2</version.jboss.portal.bom>

        <!-- maven-compiler-plugin -->
        <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
        <maven.compiler.target>1.6</maven.compiler.target>
        <maven.compiler.source>1.6</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!--
            JBoss Tools and JBoss Developer Studio use m2eclipse.wtp.contextRoot as a part
            of the URL which they display in a browser after this portlet has been deployed.
            Do not forget to invoke

              context menu over this project > Maven > Update Project...

            after changing this value.
        -->
        <m2eclipse.wtp.contextRoot>/portal/classic</m2eclipse.wtp.contextRoot>

        <version.surefire.plugin>2.15</version.surefire.plugin>
        <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>

        <version.junit>4.11</version.junit>
        <version.jboss.arquillian.extension>1.1.0.Alpha1</version.jboss.arquillian.extension>
        <version.arquillian.graphene>2.0.0.Final</version.arquillian.graphene>
        <org.jboss.as.version>7.2.0.Final</org.jboss.as.version>

        <!-- Arquillian Configuration -->
        <arquillian.debug>true</arquillian.debug>
        <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
        <arquillian.drone.reusable>false</arquillian.drone.reusable>
        <arquillian.container.home />
        <arquillian.container.distribution />
        <arquillian.container.configuration />
        <!-- <arquillian.container.uninstall>true</arquillian.container.uninstall> -->
        <arquillian.container.vmargs>-Xmx768m -XX:MaxPermSize=256m</arquillian.container.vmargs>
        <!--<arquillian.container.vmargs>-Xmx768m -XX:MaxPermSize=256m -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</arquillian.container.vmargs>-->
        <arquillian.maven.settings />

        <!-- Container Selection -->
        <arquillian.launch.jbportal62>true</arquillian.launch.jbportal62>

    </properties>

    <dependencyManagement>
        <dependencies>
            <!--
                Define the version of JBoss Portal we build for. In its dependencyManagement,
                JBoss Portal Bill of Materials (BOM) specifies the versions
                of dependencies which are granted to be compatible with (or indeed
                in many cases provided by) JBoss Portal.
            -->
            <dependency>
                <groupId>org.jboss.bom.portal</groupId>
                <artifactId>jboss-portal-bom</artifactId>
                <version>${version.jboss.portal.bom}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.jboss.shrinkwrap.resolver</groupId>
                <artifactId>shrinkwrap-resolver-bom</artifactId>
                <version>2.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.shrinkwrap.descriptors</groupId>
                <artifactId>shrinkwrap-descriptors-bom</artifactId>
                <version>2.0.0-alpha-5</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.jboss.arquillian</groupId>
                <artifactId>arquillian-bom</artifactId>
                <version>1.1.1.Final</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!--
            The versions of these dependencies are managed in jboss-portal-bom.
            Note that artifacts managed in jboss-portal-bom are <scope>provided</scope> in most cases.
            Name only those artifacts you refer to in your code.
            Look at jboss-portal-bom POM file for the complete list of available artifacts.
        -->
        <!-- General JSF dependencies -->
        <dependency>
            <groupId>org.jboss.spec.javax.faces</groupId>
            <artifactId>jboss-jsf-api_2.1_spec</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.portletbridge</groupId>
            <artifactId>portletbridge-api</artifactId>
            <scope>provided</scope>
        </dependency>


        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-api-maven</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.extension</groupId>
            <artifactId>arquillian-portal-shrinkwrap-api</artifactId>
            <version>${version.jboss.arquillian.extension}</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>org.jboss.arquillian.extension</groupId>
            <artifactId>arquillian-portal-build-resources</artifactId>
            <version>${version.jboss.arquillian.extension}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.descriptors</groupId>
            <artifactId>shrinkwrap-descriptors-impl-javaee</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.junit</groupId>
            <artifactId>arquillian-junit-container</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.protocol</groupId>
            <artifactId>arquillian-protocol-servlet</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.shrinkwrap.resolver</groupId>
            <artifactId>shrinkwrap-resolver-depchain</artifactId>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.graphene</groupId>
            <artifactId>graphene-webdriver</artifactId>
            <version>${version.arquillian.graphene}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.extension</groupId>
            <artifactId>arquillian-portal-shrinkwrap-impl</artifactId>
            <version>${version.jboss.arquillian.extension}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.arquillian.extension</groupId>
            <artifactId>arquillian-portal-impl-base</artifactId>
            <version>${version.jboss.arquillian.extension}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.portletbridge</groupId>
            <artifactId>portletbridge-impl</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <testResources>
            <testResource>
                <directory>src/test/resources/</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>

        <plugins>
          <!--
          The Maven Surefire plugin tests your application. Here we ensure we are using a version compatible with Arquillian
          -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${version.surefire.plugin}</version>
          </plugin>

          <plugin>
                <groupId>org.jboss.as.plugins</groupId>
                <artifactId>jboss-as-maven-plugin</artifactId>
                <version>${version.jboss.maven.plugin}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>integration-tests</id>
            <activation>
                <property>
                    <name>integration</name>
                </property>
            </activation>
            <properties>
                <integration.test.source>src/test/integration</integration.test.source>
                <integration.test.pattern>**/it/**/*.java</integration.test.pattern>

            </properties>
            <build>
                <testResources>
                    <testResource>
                        <directory>src/test/resources</directory>
                        <filtering>false</filtering>
                    </testResource>
                    <testResource>
                        <directory>${integration.test.source}</directory>
                        <filtering>false</filtering>
                    </testResource>
                    <testResource>
                        <directory>src/test/arquillian-settings/</directory>
                        <filtering>true</filtering>
                    </testResource>
                </testResources>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>unpack-arquillian-settings</id>
                                <phase>initialize</phase>
                                <goals>
                                    <goal>unpack</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.jboss.arquillian.extension</groupId>
                                            <artifactId>arquillian-portal-build-resources</artifactId>
                                            <type>jar</type>
                                            <overWrite>true</overWrite>
                                        </artifactItem>
                                    </artifactItems>
                                    <includes>arquillian.xml</includes>
                                    <outputDirectory>src/test/arquillian-settings</outputDirectory>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>add-integration-test-sources</id>
                                <phase>process-test-sources</phase>
                                <goals>
                                    <goal>add-test-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>${integration.test.source}</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>default-test</id>
                                <configuration>
                                    <skipTests>${skipTests}</skipTests>
                                    <test>${test}</test>
                                    <excludes>
                                        <exclude>${integration.test.pattern}</exclude>
                                    </excludes>
                                </configuration>
                            </execution>
                            <execution>
                                <id>integration-tests</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <skipTests>${skipITs}</skipTests>
                                    <test>${test}</test>
                                    <includes>
                                        <include>${integration.test.pattern}</include>
                                    </includes>
                                    <groups>${testCategory.included.default}</groups>
                                    <excludedGroups>${testCategory.excluded.default} ${testCategory.excluded.browser}
                                        ${testCategory.excluded.container}</excludedGroups>
                                    <systemPropertyVariables>
                                        <arquillian.debug>${arquillian.debug}</arquillian.debug>
                                    </systemPropertyVariables>
                                </configuration>
                            </execution>
                        </executions>
                        <dependencies>
                            <dependency>
                                <groupId>org.jboss.arquillian.extension</groupId>
                                <artifactId>arquillian-portal-build-resources</artifactId>
                                <version>${project.version}</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <!-- Browsers -->
        <profile>
            <id>browser-phantomjs</id>
            <activation>
                <property>
                    <name>browser</name>
                    <value>phantomjs</value>
                </property>
            </activation>
            <properties>
                <arquillian.drone.browser>phantomjs</arquillian.drone.browser>
            </properties>
        </profile>
        <profile>
            <id>browser-chrome</id>
            <activation>
                <property>
                    <name>browser</name>
                    <value>chrome</value>
                </property>
            </activation>
            <properties>
                <arquillian.drone.browser>chrome</arquillian.drone.browser>
            </properties>
        </profile>
        <profile>
            <id>browser-firefox</id>
            <activation>
                <property>
                    <name>browser</name>
                    <value>firefox</value>
                </property>
            </activation>
            <properties>
                <arquillian.drone.browser>firefox</arquillian.drone.browser>
            </properties>
        </profile>

        <profile>
            <id>arq-jbossas-managed</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.jboss.as</groupId>
                    <artifactId>jboss-as-arquillian-container-managed</artifactId>
                    <version>${org.jboss.as.version}</version>
                    <scope>test</scope>
                </dependency>
            </dependencies>
           <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <systemPropertyVariables>
                                <arquillian.launch>jboss-portal-6.2</arquillian.launch>
                            </systemPropertyVariables>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
